Added execute permissions to run_tests.sh

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -42,6 +42,7 @@ ADD client/package.json /source/client/package.json
 ADD client/wct.conf.js /source/client/wct.conf.js
 ADD client/test.html /source/client/test.html
 ADD run_tests.sh /source/run_tests.sh
+RUN chmod +x /source/run_tests.sh
 
 # Dependencies
 RUN cd /source && sbt update
